# components

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-components.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/components/: ComponentsModule.java  ComponentsPackage.java
android/src/newarch/: ComponentsSpec.java
android/src/oldarch/: ComponentsSpec.java
cpp/: react-native-components.cpp  react-native-components.h
example/: app.json  package.json  react-native.config.js
example/android/: link-assets-manifest.json  settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/ComponentsExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/ComponentsExample.xcodeproj/: project.pbxproj
example/ios/ComponentsExample.xcworkspace/: contents.xcworkspacedata
example/ios/ComponentsExampleTests/: ComponentsExampleTests.m
example/src/: App.tsx
ios/: Components.h  Components.mm
src/: NativeComponents.ts  index.tsx
src/colors/: colors.ts
src/components/: Badge.tsx  Button.tsx  Card.tsx  CheckboxItem.tsx  CheckboxTree.tsx  Col.tsx  Divider.tsx  Dropdown.tsx  Input.tsx  Label.tsx  Loading.tsx  Row.tsx  Section.tsx  Space.tsx  Text.tsx  index.ts
src/models/: MenuProps.ts
src/styles/: globalStyles.ts  globals.ts
src/utils/: DateTime.ts  numberToString.ts  replaceHtmlTags.ts  replaceName.ts  validators.ts
(+3 files in other folders)
